# sdl-rpg-game

./: .gitmodules  CMakeLists.txt  README.md
assets/: map_test.csv
src/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
src/Core/: Collision.cpp  Collision.h
src/Core/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  PlayerController.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
src/Core/GameObject/: GameObject.cpp  GameObject.h
src/Game/: Game.cpp  Game.h  Map.cpp  Map.h
src/Manager/: AssetsManager.cpp  AssetsManager.h  TextureManager.cpp  TextureManager.h
